@@ -124,6 +124,10 @@ sub to_xpath {
                 push @parts, "[\@xml:lang='$1' or starts-with(\@xml:lang, '$1-')]";
             } elsif ($1 =~ /^nth-child\((\d+)\)$/) {
                 push @parts, "[count(preceding-sibling::*) = @{[ $1 - 1 ]}]";
+            } elsif ($1 =~ /^first-of-type$/) {
+                push @parts, "[1]";
+            } elsif ($1 =~ /^nth-of-type\((\d+)\)$/) {
+                push @parts, "[$1]";
             } else {
                 Carp::croak "Can't translate '$1' pseudo-class";
             }
