@@ -1,7 +1,9 @@
 Revision history for Perl extension HTML::Selector::XPath
 
 0.05 to be released
-      - Add CCS3 "=*" operator for real substring matching
+      - Add CSS3 "=*" operator for real substring matching
+      - Add CSS3 ":first-of-type" and ":nth-of-type()" pseudo-attributes
+        (but if you're using them, you're likely better off using XPath already)
 
 0.04  Sat Feb 27 01:43:00 PST 2010
       - No code change. Fix the packaging issue and typo in the doc
